--- a/blog/templates/blog/post/detail.html
+++ b/blog/templates/blog/post/detail.html
@@ -15,7 +15,15 @@
   {% empty %}
     There are no similar posts yet.
   {% endfor %}
-
+ <p class="tags">
+    Tags:
+        {% for tag in post.tags.all %}
+            <a href="{% url "blog:post_list_by_tag" tag.slug %}">
+            {{ tag.name }}
+            </a>
+            {% if not forloop.last %}, {% endif %}
+        {% endfor %}
+    </p>
 {% with comments.count as total_comments %}
 <h2>{{ total_comments }} comment{{ total_comments|pluralize }}</h2>
 {% endwith %}
